--- a/01_CookieParameterArray/05_CookieParamterArray.htm
+++ b/01_CookieParameterArray/05_CookieParamterArray.htm
@@ -29,39 +29,95 @@
         return "";
     }
 
+    function dArr2sData (dArr) {
+        szie = dArr.length;
+        sData=[];
+        for (var  i = 0, j = 0; i < dArr.length; i++) {
+            j = j + 1;
+            pm = "P" + parseInt (j);
+            sData.push(pm);
+            sData.push (dArr[i]['key']);
+            j = j + 1;
+            pm = "P" + parseInt (j);
+            sData.push(pm);
+            sData.push (dArr[i]['value'])
+        }
+        return sData;
+    }
+
+    // input cData (Cookie Data) into final dData (Data Array)
+    // cData[0]=k1, cData[1]=v1, cData[2]=k2, cData[3]=v2, cData[4]=k3, cData[5]=v[3]
+    // dData (Cookie Data) converted into final dArray (data array)
+    // fdArr = [
+    //   {key: "k1", value: "v1"}, 
+    //   {key: "k2", value: "v2"},
+    //   {key: "k3", value: "v3"}
+    // ];
+    function cData2dArr (cData) {
+        var fdArr = [];
+        for (var i = 0; i < cData.length; i = i + 2) {
+            var node = {};
+            node['key'] = cData[i]; 
+            node ['value'] = cData[i+1];
+            fdArr.push (node)
+        }
+        return fdArr;
+    }
+
     function myfunction() {
-        /* b = [
+        /* Input data array dArr[] 
+        dArr = [
             {key: "k1", value: "v1"}, 
             {key: "k2", value: "v2"},
             {key: "k3", value: "v3"}
         ];
-
-        // need to translate into
-        data = ["P1", "k1", "P2", "v1", "P3", "k2", "P4", "v2", "P5", "k3", "P6", "v3"];
+        // dArr[] (data array) translates into sData[] (send Coookie Data).
+        sData = ["P1", "k1", "P2", "v1", "P3", "k2", "P4", "v2", "P5", "k3", "P6", "v3"]; 
         */
-        data = ["P1", "k1", "P2", "v1", "P3", "k2", "P4", "v2", "P5", "k3", "P6", "v3"];
-        // size = 6 data (k1, v1, k2, v2, k3, v3). Each data need a cookie header
-        size = 6
-        setCookie("Param", size, 10);  // set param=6 for 10 days
-        for(var i = 0; i < size * 2; i = i + 2){
-            setCookie(data[i], data[i + 1], 10); // set P1=k1; P2=v1; P3=k2; P4=v2; P5=k3; P6=v3
+        dArr = [
+        {key: "k1", value: "v1"}, 
+        {key: "k2", value: "v2"},
+        {key: "k3", value: "v3"}
+        ];
+        sData = dArr2sData (dArr);
+        for (var i = 0; i < sData.length; i++) {
+            console.log ('sData[' + i + ']:', sData[i])
+        }
+        
+        // sData = ["P1", "k1", "P2", "v1", "P3", "k2", "P4", "v2", "P5", "k3", "P6", "v3"];
+        sSize = sData.length; // 12
+        console.log ("sSize: ", sSize);
+        setCookie("Param", sSize, 10);  // set param=6 for 10 days
+        for(var i = 0; i < sSize/2; i = i + 2){
+            setCookie(sData[i], sData[i + 1], 10); // set P1=k1; P2=v1; P3=k2; P4=v2; P5=k3; P6=v3
         }
 
-        var cSize = getCookie("Param"); // get Param=6
+        // Now, get the cookie data from URL
+        var cSize = getCookie("Param"); // get Param=12
         console.log ('cSize: ', cSize);
-        var b = [];
-        for (var i = 1; i <= cSize; i = i + 2){
+        // Collect the cData (Cookie Data)
+        var cData = [];
+        for (var i = 1; i <= cSize/2; i = i + 2){
             p1 = "P" + i;
-            console.log ('p1:', p1) // Get P1=, P3=, P5=, etc.
-            b.push(getCookie(p1));
+            console.log ('P1:', p1) // Get P1=, P3=, P5=, etc.
+            cData.push(getCookie(p1));
             p2 = "P" + parseInt (i + 1);
-            console.log ('p2:', p2); // Get P2=, P4=, P6= etc.
-            b.push(getCookie(p2));
+            console.log ('P2:', p2); // Get P2=, P4=, P6= etc.
+            cData.push(getCookie(p2));
         }
-        for (var i = 0; i < b.length; i++) {
-            console.log ('b['+ i + ']:', b[i]); // b[0]=k1, b[1]=v1, k[2]=k2, k[3]=v2, b[4]=k3, b[5]=v[3]
+        for (var i = 0; i < cData.length; i++) {
+            console.log ('cData['+ i + ']:', cData[i]); 
         }
-        return b;
+        // cData[0]=k1, cData[1]=v1, cData[2]=k2, cData[3]=v2, cData[4]=k3, cData[5]=v[3]
+        // dData (Cookie Data) converted into final dArray (data array)
+        fdArr = cData2dArr (cData);
+        fdStr = '';
+        for (var i = 0; i < fdArr.length; i++) {
+            console.log ('fdArr['+ i + ']:', fdArr[i]); 
+            fdStr = fdStr + 'fdArr['+ i + '][key]:' + fdArr[i]['key'];
+            fdStr = fdStr + ' fdArr['+ i + '][value]:' + fdArr[i]['value'] + '<br>';
+        }
+        return fdStr;
     }
 </script>
 </head>
